HHH-20747 - Reorganize stuff needed for Dialect implementors to make them SPI HHH-20748 - New @SPI annotation to clarify expectations around SPI providers
Signed-off-by: Steve Ebersole <steve@hibernate.org>